<resources>
    <string name="app_name">球球大作战棒棒糖</string>
    <!--<string name="app_name">球球宝箱</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gift_package">快來快來，海量礼包等你来!</string>
    <string name="share">分享</string>
    <array name="main_tab_menu_title">
        <item>新手大礼包奖励</item>
        <item>每日签到领积分</item>
        <item>分享到5个QQ群</item>
        <item>做任务赚积分</item>
    </array>
    <array name="main_tab_menu_sub_title">
        <item>新用户首次获得5积分</item>
        <item>每日签到得1积分</item>
        <item>分享到5个QQ群得10积分</item>
        <item>每下载一款app都能获\n得相应积分，日无上限</item>
    </array>
    <string name="title_activity_bsde">BsdeActivity</string>
    <string name="bbcandy_mag">使用说明：\n\n
        1、每天能领取5个棒棒糖\n\n
        2、官方规定：一周只能领取20个棒棒糖\n\n
        3、此工具免费使用，不收费！\n\n
        4、想获得更多棒棒糖，做任务赚积分兑换商品！\n\n
        5、如果不知道什么是链接，上面右边有说明
    </string>


    <string name="about_what">什么是《球球大作战棒棒糖》</string>
    <string name="about_what_detail">球球宝盒是一个可以让各位鹏偶遇利用手机体验移动互联网产品来或得收入的一款App，让你在玩手机的同时也能轻松赚钱。
    </string>
    <string name="about_how">怎么赚积分</string>
    <string name="about_how_detail">
        打开我们的软件，每日签到打卡可以获取固定的收入，每天坚持做任务可以拿到更多更好的积分，简简单单每天10分钟，轻松赚取几百积分。积分可以用来兑换Q币和话费，并且可以提现直接转入支付宝
    </string>
    <string name="about_score">积分兑换及客服</string>
    <string name="about_score_detail">一般情况下，我们将在一天内给您兑换，由于需要人工审核，这个请您谅解，积分收益到账的任何问题，请联系我们客服</string>
    <string name="about_kefu">客服QQ：2095904889</string>
    <string name="about_url">球球宝盒官方网址</string>
</resources>
